# MAGS-CodeDev

./: .gitignore  Dockerfile  LICENSE  README.md  config.template.yaml  config.yaml  dockerfile  pyproject.toml  tasks.json
mags_codedev/: Dockerfile.dev  __init__.py  cli.py  graph.py  state.py
mags_codedev/agents/: __init__.py  chat_agent.py  coder.py  log_checker.py  reviewer.py  tester.py
mags_codedev/utils/: __init__.py  config_parser.py  db.py  docker_ops.py  git_ops.py  logger.py
